# trivia

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  justfile
.claude/: settings.local.json
.claude-plugin/: CLAUDE.md  marketplace.json  plugin.json
.github/workflows/: release.yml
apps/cli/: Cargo.toml  build.rs
apps/cli/src/: acl.rs  auth_middleware.rs  lib.rs  main.rs  mcp.rs  oauth.rs  www.rs
apps/cli/src/providers/: github.rs  mod.rs
apps/cli/tests/: mcp_acl.rs
apps/cli/www/: index.html  package-lock.json  package.json
apps/cli/www/src/: App.tsx  api.ts
apps/cli/www/src/components/: CreateMemoryDialog.tsx  LinkDialog.tsx  MergeDialog.tsx
apps/cli/www/src/pages/: GraphView.tsx  MemoryDetail.tsx  MemoryList.tsx
apps/mcp/: Cargo.toml
apps/mcp/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: auth_store.rs  config.rs  embedder.rs  export.rs  lib.rs  store.rs
hooks/: hooks.json
scripts/: install
