[workspace]
members = ["apps/*", "crates/*"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = "0.7"
fastembed = "4"
tower-mcp = { version = "0.6", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
serde_norway = "0.9.42"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
include_dir = "0.7"
