[package]
name = "trivia-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "trivia"
path = "src/main.rs"

[dependencies]
trivia-core = { path = "../../crates/core" }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
include_dir = { workspace = true }
serde = { workspace = true }
