[package]
name = "trivia-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "trivia"
path = "src/main.rs"

[dependencies]
trivia-core = { path = "../../crates/core" }
clap = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower-mcp = { workspace = true }
include_dir = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
