[package]
name = "trivia-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
zerocopy = { workspace = true }
fastembed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
