[package]
name = "trivia-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
zerocopy = { workspace = true }
fastembed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
serde_norway = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
